<resources>
    <string name="app_name">TFG</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">sign up</string>
    <string name="password">Password</string>
    <string name="user">User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_2_60_mb">2,60 MB</string>
    <string name="archivo">Archivo</string>
    <string name="tama_o_archivo">Tamaño Archivo</string>
    <string name="email">Email</string>
    <string name="prefs_file">com.example.tfg.PREFERENCE_FILE_KEY</string>
    <string name="g_nero">Género</string>
    <string name="cerrar_sesi_n">cerrar sesión</string>
    <string name="eliminar_cuenta">Eliminar cuenta</string>
</resources>